--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="NativeScript"></ActionBar>
+<ActionBar title="NativeScript Mobile App"></ActionBar>
 <StackLayout>
     <Label text="Hello World"></Label>
 </StackLayout>
