rremoved items directory

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,5 +1,5 @@
 <ActionBar title="NativeScript Mobile App"></ActionBar>
 <StackLayout>
-    <Label text="Hello World"></Label>
+    <Label text="Hello World!!"></Label>
 </StackLayout>
 
