updated folder structure for main screens

--- a/src/app/features/scoring/scoring.component.html
+++ b/src/app/features/scoring/scoring.component.html
@@ -1,5 +1,5 @@
 <ActionBar title="NativeScript Mobile App"></ActionBar>
 <StackLayout>
-    <Label text="Home Screen"></Label>
+    <Label text="Scoring Screen"></Label>
 </StackLayout>
 
