--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,5 +1,5 @@
 <ActionBar title="NativeScript Mobile App"></ActionBar>
 <StackLayout>
-    <Label text="Home Screen"></Label>
+    <Label text="Login Screen"></Label>
 </StackLayout>
 
